// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders Col correctly 1`] = `
<div
  className="col-component col large-8 medium-6 small-4 hidden-xs myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;

exports[`Grid renders Grid correctly 1`] = `
<div
  className="grid-component grid myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;

exports[`Grid renders Grid with Row & Col correctly 1`] = `
<Grid
  className="myClass"
  style={
    Object {
      "width": "50px",
    }
  }
>
  <div
    className="grid-component grid myClass"
    id={undefined}
    style={
      Object {
        "width": "50px",
      }
    }
  >
    <Row
      className="myClass"
      style={
        Object {
          "width": "50px",
        }
      }
    >
      <div
        className="row-component row myClass"
        id={undefined}
        style={
          Object {
            "width": "50px",
          }
        }
      >
        <Col
          className="myClass"
          lg={8}
          md={6}
          sm={4}
          style={
            Object {
              "width": "50px",
            }
          }
          xs="hidden"
        >
          <div
            className="col-component col large-8 medium-6 small-4 hidden-xs myClass"
            id={undefined}
            style={
              Object {
                "width": "50px",
              }
            }
          >
            Col
          </div>
        </Col>
      </div>
    </Row>
  </div>
</Grid>
`;

exports[`Grid renders Row correctly 1`] = `
<div
  className="row-component row myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;
